--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>USA/Canada nationwide search - Facebook Marketplace</title>
-  <meta name="description" content="Search the Facebook Marketplace across all the US or Canada via tabs">
+  <title>USA/Canada/Australia nationwide search - Facebook Marketplace</title>
+  <meta name="description" content="Search the Facebook Marketplace across all the US, Canada or Australia via tabs">
   <meta name="author" content="GMOZ.biz">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,6 +12,7 @@
     <h2><select id="country">
       <option value="usa" selected>USA</option>
       <option value="can">Canada</option>
+      <option value="aus">Australia</option>
     </select> nationwide search via <span id="tabsinfo" title=""><span id="tabcount">8</span> tabs</span></h2>
     <input id="search" type="text" /><br/>
     <button id="submit" type="submit">SEARCH</button>
